Added 2 new game modules and update emoji game features

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0px;
 }
 
 body {
@@ -9,4 +10,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  transition: transform 0.25s ease;
+}
+
+button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
