--- a/src/components/SearchCard/index.css
+++ b/src/components/SearchCard/index.css
@@ -1,20 +1,20 @@
-/* Write your code here. */
-
 .list1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   align-self: center;
-  width: 115px;
-  height: 115px;
+  width: 100px;
+  height: 100px;
   border: 3px solid #ffffff30;
   background-color: #ffffff33;
   border-radius: 20px;
   cursor: pointer;
+  margin: 0px;
+  margin-bottom: 10px;
 }
-.li-emoji {
-  height: 50%;
+.li-emojii {
+  height: 10vh;
   align-self: center;
 }
 .noBg-btn {
