--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -40,14 +40,34 @@
 .scored-points {
   color: #6a59ff;
   margin-top: 0px;
+  margin-bottom: 10px;
   font-size: 30px;
   font-weight: 600;
 }
 .play-button {
-  height: 40px;
+  height: 35px;
   width: 100px;
   border-radius: 30px;
+  margin-bottom: 10px;
   background-color: #ffce27;
   border-width: 0px;
   outline: none;
+}
+.change-level {
+  background-color: #13bee0;
+}
+.go-home {
+  background-color: #85e967;
+}
+.btn-div1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn-div2 {
+  display: flex;
+  gap: 10px;
+}
+.show-time-out {
+  color: #ef3e2e;
 }
