--- a/src/components/EmojiMatch/index.css
+++ b/src/components/EmojiMatch/index.css
@@ -28,12 +28,9 @@
   text-align: center;
   background-color: #564747;
   word-spacing: 5px;
-  box-shadow:
-    inset 0 0 10px rgba(255, 204, 0, 0.4),
-    0 0 15px 5px rgba(255, 204, 0, 0.5),
-    0 0 30px 10px rgba(255, 180, 0, 0.4),
-    0 0 45px 15px rgba(255, 150, 0, 0.3),
-    0 0 60px 20px rgba(255, 120, 0, 0.2);
+  box-shadow: inset 0 0 10px rgba(255, 204, 0, 0.4),
+    0 0 15px 5px rgba(255, 204, 0, 0.5), 0 0 30px 10px rgba(255, 180, 0, 0.4),
+    0 0 45px 15px rgba(255, 150, 0, 0.3), 0 0 60px 20px rgba(255, 120, 0, 0.2);
   border: 3px solid rgba(255, 200, 0, 0.8);
 }
 .won-img {
@@ -87,16 +84,12 @@ h2 {
   border: 3px solid #ff4500;
   font-weight: 500;
   font-family: Bree Serif;
-  box-shadow:
-    inset 0 0 10px rgba(255, 69, 0, 0.6),
-    0 0 15px rgba(255, 69, 0, 0.8),
-    0 0 30px rgba(255, 0, 0, 0.6);
+  box-shadow: inset 0 0 10px rgba(255, 69, 0, 0.6),
+    0 0 15px rgba(255, 69, 0, 0.8), 0 0 30px rgba(255, 0, 0, 0.6);
 
   color: rgba(255, 200, 0, 0.8);
   font-size: 2.5em;
-  text-shadow:
-    0 0 8px #ff6347,
-    0 0 15px #ff0000;
+  text-shadow: 0 0 8px #ff6347, 0 0 15px #ff0000;
 }
 .power-up-banner {
   padding: 15px 30px;
@@ -107,15 +100,11 @@ h2 {
   border: 3px solid #00ffff;
   font-family: Bree Serif;
   font-weight: 500;
-  box-shadow:
-    inset 0 0 10px rgba(0, 255, 255, 0.6),
-    0 0 15px rgba(0, 255, 255, 0.8),
-    0 0 30px rgba(0, 191, 255, 0.6);
+  box-shadow: inset 0 0 10px rgba(0, 255, 255, 0.6),
+    0 0 15px rgba(0, 255, 255, 0.8), 0 0 30px rgba(0, 191, 255, 0.6);
   color: white;
   font-size: 2.5em;
-  text-shadow:
-    0 0 8px #00ffff,
-    0 0 15px #00bfff;
+  text-shadow: 0 0 8px #00ffff, 0 0 15px #00bfff;
 }
 .new-challenge {
   font-family: Bree Serif;
@@ -132,14 +121,10 @@ h2 {
   font-family: Bree Serif;
   background-color: #38761d;
   border: 3px solid #6aa84f;
-  box-shadow:
-    inset 0 0 10px rgba(106, 179, 64, 0.6),
-    0 0 15px rgba(106, 179, 64, 0.8),
-    0 0 30px rgba(50, 205, 50, 0.6);
+  box-shadow: inset 0 0 10px rgba(106, 179, 64, 0.6),
+    0 0 15px rgba(106, 179, 64, 0.8), 0 0 30px rgba(50, 205, 50, 0.6);
 
-  text-shadow:
-    0 0 8px #90ee90,
-    0 0 15px #3cb371;
+  text-shadow: 0 0 8px #90ee90, 0 0 15px #3cb371;
 }
 .perfect-score {
   padding: 15px 30px;
@@ -151,13 +136,9 @@ h2 {
   font-family: Bree Serif;
   background-color: #4c5966;
   border: 3px solid #c0c0c0;
-  box-shadow:
-    inset 0 0 10px rgba(220, 220, 220, 0.6),
-    0 0 15px rgba(192, 192, 192, 0.8),
-    0 0 30px rgba(240, 248, 255, 0.6);
-  text-shadow:
-    0 0 8px #f5f5f5,
-    0 0 15px #dcdcdc;
+  box-shadow: inset 0 0 10px rgba(220, 220, 220, 0.6),
+    0 0 15px rgba(192, 192, 192, 0.8), 0 0 30px rgba(240, 248, 255, 0.6);
+  text-shadow: 0 0 8px #f5f5f5, 0 0 15px #dcdcdc;
 }
 .btns-result {
   display: flex;
@@ -176,9 +157,7 @@ h2 {
 
   background-color: #ffc300;
   border: 3px solid #ff8c00;
-  box-shadow:
-    inset 0 0 5px rgba(255, 255, 0, 0.8),
-    0 0 10px rgba(255, 165, 0, 0.7),
-    0 0 20px rgba(255, 140, 0, 0.5);
+  box-shadow: inset 0 0 5px rgba(255, 255, 0, 0.8),
+    0 0 10px rgba(255, 165, 0, 0.7), 0 0 20px rgba(255, 140, 0, 0.5);
   transition: all 0.2s ease-in-out;
 }
