--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -15,24 +15,16 @@
   font-size: 70px;
   font-weight: 900;
   color: #ffffff;
-  text-shadow:
-    -3px -3px 0 #3f51b5,
-    3px -3px 0 #3f51b5,
-    -3px 3px 0 #3f51b5,
-    3px 3px 0 #3f51b5,
-    0px 6px 15px rgba(0, 0, 0, 0.3);
+  text-shadow: -3px -3px 0 #3f51b5, 3px -3px 0 #3f51b5, -3px 3px 0 #3f51b5,
+    3px 3px 0 #3f51b5, 0px 6px 15px rgba(0, 0, 0, 0.3);
 }
 .title-bottom {
   display: block;
   font-size: 75px;
   font-weight: 900;
   color: #ffcc33; /* yellow/orange like Bubble Boom */
-  text-shadow:
-    -3px -3px 0 #714ab4,
-    3px -3px 0 #714ab4,
-    -3px 3px 0 #714ab4,
-    3px 3px 0 #714ab4,
-    0px 8px 18px rgba(0, 0, 0, 0.35);
+  text-shadow: -3px -3px 0 #714ab4, 3px -3px 0 #714ab4, -3px 3px 0 #714ab4,
+    3px 3px 0 #714ab4, 0px 8px 18px rgba(0, 0, 0, 0.35);
   margin-top: -20px;
 }
 .h-container2 {
